File Test, Mail With Attachment Test

--- a/prop.properties
+++ b/prop.properties
@@ -3,3 +3,4 @@ mainActivity=ch.protonmail.android.activities.SplashActivity
 nodeExecPath=C:\\Program Files (x86)\\Appium\\node.exe
 appiumJSPath=C:\\Program Files (x86)\\Appium\\node_modules\\appium\\bin\\appium.js
 deviceName=emulator-5554
+packageName=ch.protonmail.android
